--- a/friends.html
+++ b/friends.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Clone</title>
+    <title>Friends - Kokoa Clone</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -23,17 +23,24 @@
         </div>
     </div>
 
-    <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
-        <p class="welcome-header__text">If you have a Kakao Account, log in with your email or phone number</p>
-    </header>
 
-    <form action="friends.html" method="get" id="login-form">
-        <input name="username" type="text" placeholder="Email or phone number"/>
-        <input name="password" type="password" placeholder="password"/>
-        <input type="submit" value="Log In" />
-        <a href="#">Find Kakao Account or Password</a>
-    </form>
+<nav class="nav">
+    <ul class="nav__list">
+        <li class="nav__btn">
+            <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+            <a class="nav__link" href="#">
+                <span class="nav__notification">1</span><i class="far fa-comment fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+            <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+            <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a>
+        </li>
+    </ul>
+</nav>
 
     <script 
         src="https://kit.fontawesome.com/12d457089a.js" 
