--- a/friends.html
+++ b/friends.html
@@ -23,8 +23,39 @@
         </div>
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+    </header>
 
-<nav class="nav">
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i>
+         Friends' Names Display 
+        <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+            <img
+              src="https://avatars3.githubusercontent.com/u/3612017"
+              class="user-component__avatar user-component__avatar--xl"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Nicolas</h4>
+              <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column"></div>
+        </div>
+    </main>
+
+
+    <nav class="nav">
     <ul class="nav__list">
         <li class="nav__btn">
             <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
@@ -37,10 +68,10 @@
             <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-            <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a>
+            <a class="nav__link" href="#"><span class="nav__red-dot"></span><i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
     </ul>
-</nav>
+    </nav>
 
     <script 
         src="https://kit.fontawesome.com/12d457089a.js" 
