--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Kokoa Clone</title>
+    <title>Chats - Kokoa Clone</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -14,63 +14,39 @@
             <i class="fa-solid fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>21:23</span>
         </div>
         <div class="status-bar__column">
-            <span>84%</span>
-            <i class="fa-solid fa-battery-three-quarters"></i>
-            <i class="fa-solid fa-bolt"></i>        
+            <span>100%</span>
+            <i class="fa-solid fa-battery-full fa-lg"></i>        
         </div>
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
     </header>
-
-    <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>
-         Friends' Names Display 
-        <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
 
     <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
             <img
               src="https://avatars3.githubusercontent.com/u/3612017"
-              class="user-component__avatar user-component__avatar--xl"
+              class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Nicolas</h4>
-              <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
-            </div>
-          </div>
-          <div class="user-component__column"></div>
-        </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="https://avatars3.githubusercontent.com/u/3612017"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title--not-bold">Channel</h4>
+              <h4 class="user-component__title">KakaoTalk</h4>
+              <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
+            <span>21:22</span>
+            <span class="user-component__notification badge">1</span>
           </div>
         </div>
     </main>
@@ -79,11 +55,11 @@
     <nav class="nav">
     <ul class="nav__list">
         <li class="nav__btn">
-            <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+            <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
             <a class="nav__link" href="chats.html">
-                <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a>
+                <span class="nav__notification badge">1</span><i class="fa-solid fa-comment fa-2x"></i></a>
         </li>
         <li class="nav__btn">
             <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
