--- a/find.html
+++ b/find.html
@@ -57,6 +57,42 @@
                 <span>Open Chat</span>
                 <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
             </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#BTS#ARMY#FRIENDS</h6>
+                    <div class="open-post__members">
+                        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+                        <span class="open-post__member-count">802 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                    <div class="open-post__photo">
+                        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+                        <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
+                    </div>
+                </div>
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">Bts Gang~</h5>
+                    <h6 class="open-post__hashtags">#english_only #ipurpleyou #jimin #taeta...</h6>
+                    <div class="open-post__members">
+                        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+                        <span class="open-post__member-count">299 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                    <div class="open-post__photo">
+                        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+                        <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>215</span></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
