--- a/chats.html
+++ b/chats.html
@@ -28,11 +28,12 @@
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
         </div>
     </header>
 
     <main class="main-screen">
+        <a href="chat-screen.html">
         <div class="user-component">
             <div class="user-component__column">
             <img
@@ -49,6 +50,7 @@
             <span class="user-component__notification badge">1</span>
           </div>
         </div>
+        </a>
     </main>
 
 
