--- a/chat-screen.html
+++ b/chat-screen.html
@@ -22,13 +22,19 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <span class="screen-header__icon"><a href="chats.html"><i class="fas fa-chevron-left fa-lg"></i></a></span>
-        <h1 class="screen-header__title">Nicholas Serráno</h1>
-        <span class="screen-header__icon"><i class="fas fa-search fa-lg"></i><i class="fas fa-bars fa-lg"></i></span>
+    <header class="screen-header chat-header">
+        <div class="chat-header__column">
+            <span class="screen-header__icon"><a href="chats.html"><i class="fas fa-chevron-left fa-lg"></i></a></span>
+        </div>
+        <div class="chat-header__column">
+            <h1 class="screen-header__title">Nicholas Serráno</h1>
+        </div>
+        <div class="chat-header__column">
+            <span class="screen-header__icon"><i class="fas fa-search fa-lg"></i><i class="fas fa-bars fa-lg"></i></span>
+        </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen chat-main">
     </main>
 
 
