--- a/chat-screen.html
+++ b/chat-screen.html
@@ -7,8 +7,8 @@
     <title>Chat-Screen - Kokoa Clone</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
-<body class="chat-screen__body">
-    <div class="status-bar">
+<body id="chat-screen">
+    <div class="status-bar" id="chat-bar">
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fa-solid fa-wifi"></i>
@@ -34,7 +34,22 @@
         </div>
     </header>
 
-    <main class="main-screen chat-main">
+    <main class="main-screen main-chat">
+        <div class="main-chat__timestamp">
+          Tuesday, June 30, 2020
+        </div>
+
+        <div class="message-row">
+            <img src="https://avatars3.githubusercontent.com/u/3612017" />
+            <div class="message-row__content">
+                <span class="message__author">Nicolas</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
+        
     </main>
 
 
