--- a/chat-screen.html
+++ b/chat-screen.html
@@ -27,7 +27,7 @@
             <span class="screen-header__icon"><a href="chats.html"><i class="fas fa-chevron-left fa-lg"></i></a></span>
         </div>
         <div class="chat-header__column">
-            <h1 class="screen-header__title">Nicholas Serráno</h1>
+            <h1 class="screen-header__title">Nicholas</h1>
         </div>
         <div class="chat-header__column">
             <span class="screen-header__icon"><i class="fas fa-search fa-lg"></i><i class="fas fa-bars fa-lg"></i></span>
@@ -49,8 +49,30 @@
                 </div>
             </div>
         </div>
+
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Sup</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
         
     </main>
+
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-lg"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a message..." />
+            <i class="far fa-smile-wink fa-lg"></i>
+            <button>
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </form>
 
 
     <script 
