splash sceen animation

--- a/friends.html
+++ b/friends.html
@@ -94,6 +94,10 @@
     </ul>
     </nav>
 
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
+
     <script 
         src="https://kit.fontawesome.com/12d457089a.js" 
         crossorigin="anonymous"
