--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <a href="#">Find Kakao Account or Password</a>
     </form>
 
+    <div id="media-query">
+        <span>Your screen is too wide :(</span>
+    </div>
+
     <script 
         src="https://kit.fontawesome.com/12d457089a.js" 
         crossorigin="anonymous"
