why doesn't it work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Welcome to Kokoa Clone</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
-<body>
+<body>    
+    <div id="original-name">
+        <span>Your screen is too wide</span>
+    </div>
+
+
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -35,9 +40,7 @@
         <a href="#">Find Kakao Account or Password</a>
     </form>
 
-    <div id="media-query">
-        <span>Your screen is too wide :(</span>
-    </div>
+
 
     <script 
         src="https://kit.fontawesome.com/12d457089a.js" 
